# wasm

./: .gitignore  Cargo.toml  Dockerfile
artifacts/: checksums.txt  checksums_intermediate.txt  sei_evm_static_call.wasm
schema/: sei-evm-static-call.json
schema/raw/: execute.json  query.json  response_to_static_call.json
src/: lib.rs  msg.rs
