[package]
name = "sei-evm-static-call"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5.0"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
sei-cosmwasm = "0.4.15"
cosmwasm-schema = "1.5.0"

[[bin]]
name = "schema"
path = "src/bin/schema.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true